Fixed spacing issue on portrait mode

--- a/src/App.scss
+++ b/src/App.scss
@@ -20,7 +20,7 @@
             margin-left: $navSize;
         }
 
-        @media screen and (orientation: landscape) {
+        @media screen and (orientation: portrait) {
             margin-bottom: $navSize;
         }
     }
