--- a/src/pages/UserProfile/style.scss
+++ b/src/pages/UserProfile/style.scss
@@ -35,8 +35,8 @@
         font-size: $size*2;
         color: #eee;
         background: #222;
-        border-radius: 40%;
-        box-shadow: 0 0 2.5em -0.25em #00000099;
+        border-radius: 100%;
+        box-shadow: 0 0 0.25em 0 #00000099;
         height: $size;
         width: $size;
         line-height: $size;
@@ -46,8 +46,8 @@
         transition: all 500ms ease;
 
         &:hover {
-            transform: scale(1.1);
-            box-shadow: 0 0 1em 0 #00000099;
+            transform: scale(1.005);
+            box-shadow: 0 0 0.5em 0 #00000099;
         }
     }
 
